--- a/SE MS2/styles/homePageStyles.css
+++ b/SE MS2/styles/homePageStyles.css
@@ -106,9 +106,17 @@ a:hover {
   text-decoration: none;
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
+  flex-direction: row;
+}
+
 .logo-img {
   width: 20vw;
-  height: 10vh;
+  height: 20vh;
+  padding-top: 5vh;
 }
 
 .welcome-part {
@@ -190,16 +198,118 @@ a:hover {
 }
 
 #about {
-  height: 900px;
+  height: 100vh;
   border: 2px solid red;
 }
 
 #activities {
-  height: 900px;
+  height: 100vh;
   border: 2px solid green;
 }
 
 #contact {
-  height: 900px;
+  height: 100vh;
   border: 2px solid purple;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.white-part {
+  height: 30%;
+  z-index: -20;
+  position: absolute;
+  top: 0;
+}
+
+.purple-part {
+  background-color: #8e65c0;
+  height: 70%;
+  z-index: -20;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.contact-box {
+  position: absolute;
+  height: 90%;
+  width: 40%;
+  border: 2px solid gray;
+  border-radius: 10%;
+  z-index: 200;
+  background-color: white;
+  top: 5%;
+  left: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-title {
+  display: flex;
+  height: 20%;
+  align-items: center;
+  justify-content: center;
+  color: #8e65c0;
+  font-size: 3.5em;
+  font-weight: bold;
+}
+
+.form-container {
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  row-gap: 20px;
+  border: 2px solid white;
+  border-radius: 20px;
+  color: #8e65c0;
+}
+
+.contact-name,
+.contact-email,
+.contact-phone,
+.contact-message {
+  background-color: transparent;
+  border: 1px solid #8e65c0;
+  padding: 10px 10px;
+  border-width: 0px 0px 1px 0px;
+}
+
+input,
+select,
+textarea {
+  color: black;
+  border-width: 0px 0px 1px 0px;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: #8e65c0;
+}
+
+.send-button-div {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.send-button {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 0px;
+  border-radius: 20px;
+  background-color: #8e65c0;
+  color: white;
+  font-weight: bold;
+  border: 1px solid white;
+  transition: background-color 0.5s;
+  cursor: pointer;
 }
