--- a/SE MS2/styles/organization.css
+++ b/SE MS2/styles/organization.css
@@ -1,36 +1,39 @@
 body {
     background-color: #8e65c0;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   }
 
 .button-list {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    left: 45px;
-    top: 50%;
-    transform: translateY(-50%);
+    left: 100px;
+    top: 20%;
+    /* transform: translateY(-50%); */
   }
   
 .button-row {
     display: flex;
     align-items: center;
     justify-content:center;
-    margin-bottom: 5px;
-    border-radius: 35px;
+    margin-bottom: 20px;
+
+    border-radius: auto;
     transition: background-color 0.3s;
     border-color: transparent;
   }
   
 .button-row img {
-    margin-right: 8px;
-    height: 35px;
-    width: 35px;
+
+    margin-right: auto;
+    height: 30px;
+    width: 30px;
     vertical-align: middle;
   }
 
 .button-row button {
-    margin-bottom: 5px;
+    margin-bottom: auto;
     height: 50px;
     background-color: transparent;
     border-color: transparent;
@@ -53,6 +56,7 @@ body {
     border-color: transparent;
     background-color: #00cab6;
   }
+ 
 
 .post-button button { 
     margin-bottom: 5px;
@@ -70,9 +74,9 @@ body {
   }
 
 .logo {
-    position: absolute;
-    top: 10px;
-    left: 5px;
+    position:fixed;
+    top: 5px;
+    left: 45px;
   }
   
 .logo img {
@@ -83,10 +87,9 @@ body {
 .volunteers-list {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    left: 950px;
-    top: 150px;
-    transform: translateY(-50%);
+    position: fixed;
+    left: 78%;
+    top: 25%;
     border-radius: 25px;
     background-color: #ac86da;
     color: white;
@@ -200,4 +203,107 @@ body {
 .posts::-webkit-scrollbar-track {
     background-color: #d9d9d9;
     border-radius: 5px;
+}
+
+.box{
+  top:0px;
+  position: fixed;
+  left: 25%;
+  height:100%;
+  border: solid #d9d9d9;
+}
+
+
+.loc {
+  position: relative;
+  align-items: center;
+  left: center;
+  top: center;
+
+}
+.loc img{
+  position: relative;
+  border-radius: 10%;
+  top: 10px;
+  align-items: center;
+  height: 300px;
+    width: 800px;
+}
+
+#Locationword{
+  position: relative;
+  height: 50px;
+  width: 800px;
+  text-align: center;
+  font-size: 27px;
+  color: white;
+  border-top: transparent;
+
+}
+
+
+#Address{
+  position: relative;
+  top: 0px;
+  left: 20px  ;
+  font-size: 27px;
+  color:white;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.grid-container {
+  position: relative;
+  left: 0px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-template-rows: repeat(2, auto); 
+    gap: 20px; 
+    padding: 10px;
+    border: transparent;
+    color: white; 
+    
+    
+}
+
+.grid-item {
+    width: 170px;
+    padding: 5px;
+    border-radius: 8px; 
+   
+}
+
+label {
+    font-size: 24px; 
+     
+    margin-bottom: 20px; 
+}
+
+input{
+    width: 80%; 
+    padding: 8px;
+    border: 1px solid #ddd; 
+    border-radius: 4px; 
+
+
+}
+
+.loc .post-button {
+  position: relative;
+  left:44%;
+  width: 120px;
+  height: 60px;
+  color: white;
+}
+
+
+
+#map{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  
 }
