--- a/help/help.css
+++ b/help/help.css
@@ -256,13 +256,29 @@ input[type="checkbox"]:checked {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
+.donate-modal {
+  display: block;
+}
+
 .modal-content,
 .donate-modal-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
+  height: 50%;
+  font-size: 2em;
+}
+
+.donate-modal-content {
+  flex-direction: column;
+}
+
+.continue {
 }
 
 .close-button {
