--- a/SE MS2/styles/doctorStyles.css
+++ b/SE MS2/styles/doctorStyles.css
@@ -10,7 +10,10 @@ body {
     background-repeat: repeat;
     overflow: hidden;
   }
-  
+  html {
+    overflow-y: auto;
+    height: fit-content;
+  }
   .title{
     position: relative;
     height: 5%;
@@ -81,7 +84,7 @@ body {
   }
   .form{
     position: relative ;
-    height: 95%;
+    height: 70%;
     width: 70%;
     border: 5px dashed #8e61c5;
     border-radius: 8px;
@@ -89,6 +92,7 @@ body {
     align-items: center;
     justify-content: center;
     left:220px;
+    
   }
   .styled-form {
     max-width: 400px;
@@ -231,4 +235,9 @@ input[type="text"] {
     scale: 1.1;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
   }
-  
+  .map{
+    position: relative;
+    align-items: center;
+    justify-content: center;
+
+  }
