--- a/SE MS2/styles/location.css
+++ b/SE MS2/styles/location.css
@@ -3,119 +3,24 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-.loc-box {
-  top: 0px;
-  position: fixed;
-  left: 25%;
-}
-
-.loc {
-  width: 95%;
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  gap: 1vh;
-  margin-top: 2%;
-}
-.loc img {
-  position: relative;
-  border-radius: 10%;
-  top: 10px;
-  align-items: center;
-  height: 300px;
-  width: 800px;
-}
-
-#Locationword {
-  text-align: center;
-  font-size: 2em;
-  color: white;
-  border-bottom: 1px solid #d9d9d9;
-  width: 100%;
-  height: 10%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #8e65c0;
-}
-
-#Address {
-  font-size: 27px;
-  color: white;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, auto);
-  gap: 1vw;
-  border: transparent;
-  color: white;
-  width: 95%;
-  align-items: center;
-  height: 25%;
-}
-
-.grid-item {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5vh;
-}
-
 label {
-  font-size: 1.4em;
-  text-wrap: nowrap;
+  display: block;
+  margin-bottom: 5px;
 }
-
-input {
-  width: 95%;
-  height: 4.5vh;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #ecebeb;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
-
-#myButton {
-  border-radius: 10px;
-  border-color: transparent;
-  background-color: #00cab6;
-  color: white;
-  height: 35%;
-  width: 20%;
-  font-size: 1.1em;
+button[type="submit"],
+button.edit-btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
   cursor: pointer;
-  font-weight: bold;
-}
-
-.add-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-color: transparent;
-  width: 100%;
-  height: 15%;
-}
-
-#map {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  border-radius: 20px;
-}
-
-.box {
-  background-color: #ac86da;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50vw;
-  height: 100vh;
-  border-color: #d9d9d9;
-  border-style: solid;
-  border-width: 0px 1px;
-  margin: 0px;
 }
