--- a/SE MS2/styles/organization.css
+++ b/SE MS2/styles/organization.css
@@ -124,6 +124,7 @@ button {
   padding-left: 1.5vw;
   height: 14%;
   width: 100%;
+  cursor: pointer;
 }
 
 .org {
@@ -166,6 +167,7 @@ button {
   display: flex;
   align-items: end;
   justify-content: end;
+  z-index: 1000;
 }
 
 .dots span {
@@ -203,8 +205,10 @@ button {
   background-color: #ac86da;
 }
 
-.title {
+.title,
+.title-fulfilled {
   height: 10%;
+  width: 45vw;
   border-bottom: 1px solid #d9d9d9;
   color: white;
   display: flex;
@@ -212,10 +216,19 @@ button {
   justify-content: center;
   font-size: 2em;
   background-color: #8e65c0;
+  position: fixed;
+  top: 0;
+  z-index: 200;
 }
 
-#postarea {
+#postsarea {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+  padding-top: 10%;
+  height: 100vh;
+  border-color: #d9d9d9;
 }
 
 .post {
@@ -223,7 +236,7 @@ button {
   max-height: 200px;
   background-color: #ac86da;
   color: white;
-  border-color: #d9d9d9;
+
   border-style: solid;
   border-width: 3px;
   border-left: transparent;
@@ -314,19 +327,43 @@ button {
 }
 
 .pop-up-content {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   grid-template-columns: repeat(2, 1fr);
   gap: 1vh;
   column-gap: 2vh;
-  padding-left: 30%;
-  height: 60%;
+  padding-left: 5%;
+  height: 90%;
 }
 
-.post-window .post-button {
-  width: 80px;
-  bottom: 3%;
-  right: 5%;
+.inside-pop-up {
+  display: block;
+}
+
+.inside-pop-up > * {
+  margin-bottom: 2vh;
+}
+
+.inside-pop-up .upload-text,
+#imageUpload,
+file-upload-container {
+  margin-bottom: 0px;
+}
+
+.post-window {
+  display: none;
   position: absolute;
+  top: 2%;
+  left: 25%;
+  width: 50vw;
+  min-height: 10vh;
+  background-color: #ac86da;
+  border-radius: 20px;
+  border: 3px solid white;
+
+  gap: 2vh;
+  flex-direction: column;
+  z-index: 999;
 }
 
 .post-window img {
@@ -346,14 +383,14 @@ button {
   border-radius: 35px;
   transition: background-color 0.3s;
   border-color: transparent;
-  width: 98%;
+  width: 95%;
   height: 8vh;
   cursor: pointer;
+  padding-bottom: 1vh;
 }
 
 .post-now-button button {
   height: 80%;
-  background-color: transparent;
   border-color: transparent;
   color: white;
   font-weight: bold;
@@ -419,7 +456,7 @@ button {
 }
 
 .file-upload-container {
-  width: 5vw;
+  width: 6vw;
   height: 6vh;
   border: none;
   border-bottom: 2px solid #d9d9d9;
@@ -429,12 +466,16 @@ button {
   font-weight: bold;
   border-radius: 15px;
   display: flex;
-  align-items: baseline;
-  justify-content: baseline;
+  align-items: center;
+  justify-content: center;
+}
+
+.upload-text {
+  font-size: 0.9em;
 }
 
 #imageUpload {
-  width: 0px;
+  display: none;
 }
 
 .file-upload-container input[type="file"] {
@@ -461,11 +502,12 @@ button {
 #summary,
 #amount,
 #color {
-  width: 5vw;
+  width: 8vw;
   height: 6vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-left: 5px;
 }
 
 #Patientname,
@@ -477,7 +519,21 @@ button {
 #author,
 #language,
 #edition {
-  width: 5vw;
+  padding-top: 5px;
+  padding-left: 5px;
+  width: 8vw;
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#hospitalArea,
+#hospitalGov,
+#hospitalAdd {
+  padding-top: 5px;
+  padding-left: 5px;
+  width: 10vw;
   height: 5vh;
   display: flex;
   align-items: center;
@@ -584,7 +640,8 @@ button {
   background-color: #ac86da;
   color: white;
   font-size: large;
-  height: 70%;
+  height: 35vh;
+  max-height: 35vh;
   width: 80%;
   overflow-y: auto;
   border-color: #d9d9d9;
@@ -593,15 +650,41 @@ button {
   align-items: start;
   padding-left: 15px;
   padding-top: 15px;
-  gap: 1.5vh;
+  gap: 2vh;
+}
+
+.vol-pop-up {
+  position: fixed;
+  top: 10%;
+  left: 25%;
+  height: 60vh;
+  background-color: white;
+  width: 50vw;
 }
 
 .volunteer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: baseline;
   border-color: transparent;
   font-weight: bold;
+  width: 90%;
+  height: 10vh;
+  gap: 0.5vw;
+  padding: 1vh 1vh;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.volunteer:hover {
+  background-color: #c6a1f5;
+}
+
+.vol-name {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .title-vol {
@@ -631,6 +714,16 @@ button {
   height: 30px;
   width: 30px;
   margin-right: 5px;
+}
+
+.vol-initial {
+  height: 5vh;
+  width: 16%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #00cab6;
 }
 
 .noti-div {
@@ -727,6 +820,79 @@ button {
   border-radius: 5px;
 }
 
+.prof-form {
+  padding-top: 5%;
+  width: 90%;
+  padding-left: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
+
+.prof-label {
+  margin-bottom: 2vh;
+  color: white;
+}
+
+.prof-textarea {
+  height: 90%;
+}
+
+.area-and-edit {
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
+  width: 90%;
+  height: 5vh;
+  margin-bottom: 2vh;
+}
+
+.edit-btn {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1.1em;
+  background-color: transparent;
+  border: none;
+  border-radius: 20px;
+  color: white;
+}
+
+.edit-btn img {
+  height: 100%;
+  width: 3vw;
+}
+
+.date-div {
+}
+
+.calendar-form {
+  padding-top: 5%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  gap: 2vh;
+  padding-left: 2%;
+  color: white;
+}
+
+.date-selector {
+  width: 50%;
+}
+
+.submit-time {
+  height: 5vh;
+  width: 7vw;
+  background-color: #00cab6;
+  border: none;
+  color: white;
+  border-radius: 20px;
+  font-size: 1.5em;
+}
+
 /* Megz */
 
 .box {
@@ -741,16 +907,17 @@ button {
 }
 
 .Documents {
-  text-align: center;
-  font-size: 2em;
-  color: white;
-  border-bottom: 1px solid #d9d9d9;
-  width: 100%;
   height: 10%;
+  width: 45vw;
+  border-bottom: 1px solid #d9d9d9;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 2em;
   background-color: #8e65c0;
+  position: fixed;
+  top: 0;
 }
 
 .container {
@@ -829,4 +996,302 @@ button {
   margin-left: 1vw;
   width: 2vw;
   height: 4vh;
+}
+
+/* mokhtar */
+.loc-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.loc {
+  width: 90%;
+  height: 74%;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+  margin-top: 2%;
+}
+.loc img {
+  position: relative;
+  border-radius: 10%;
+  top: 10px;
+  align-items: center;
+  height: 300px;
+  width: 800px;
+}
+
+#Locationword {
+  height: 10%;
+  width: 45vw;
+  border-bottom: 1px solid #d9d9d9;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  background-color: #8e65c0;
+  position: fixed;
+  top: 0;
+}
+
+#Address {
+  font-size: 27px;
+  height: 10%;
+  display: flex;
+  color: white;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+label {
+  font-size: 1.4em;
+  text-wrap: nowrap;
+}
+
+input {
+  width: 95%;
+  height: 4.5vh;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #ecebeb;
+}
+
+#myButton {
+  border-radius: 10px;
+  border-color: transparent;
+  background-color: #00cab6;
+  color: white;
+  height: 35%;
+  width: 20%;
+  font-size: 1.1em;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.add-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-color: transparent;
+  width: 100%;
+  height: 15%;
+}
+
+#map {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  border-radius: 20px;
+}
+
+/* .box {
+  background-color: #ac86da;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50vw;
+  height: 100vh;
+  border-color: #d9d9d9;
+  border-style: solid;
+  border-width: 0px 1px;
+  margin: 0px;
+} */
+
+/* ana */
+
+.post-div {
+  border-bottom: 1px solid #c1b8b8;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 2vw;
+  padding: 5px 10px;
+}
+
+.post-pic-div {
+  width: 35%;
+  height: 90%;
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+.product-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.details-div {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.item-name {
+  color: #8e65c0;
+  font-size: 2em;
+  font-weight: bold;
+  padding: 1vh;
+  display: flex;
+  align-items: baseline;
+}
+
+.org-posting {
+  color: #bcb7b7;
+  font-size: 1em;
+  padding: 1vh;
+  display: flex;
+  align-items: baseline;
+}
+
+.buttons-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: end;
+  height: 30%;
+  gap: 10px;
+}
+
+.details-button,
+.details-stationary,
+.details-books {
+  width: 26%;
+  max-width: 10.5vw;
+  height: 100%;
+  border-radius: 50px;
+  color: #8e65c0;
+  border-color: #8e65c0;
+  font-size: 1em;
+  background-color: white;
+  font-weight: bold;
+  border-width: 3px;
+  border-style: solid;
+}
+
+.modal,
+.volModal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: baseline;
+  background-color: #ac86da;
+  margin: 10% auto;
+  padding: 20px;
+  border: 2px solid white;
+  border-radius: 20px;
+  width: 40%;
+  color: white;
+  height: 70vh;
+}
+
+.item-name-details {
+  color: white;
+  font-size: 2em;
+  font-weight: bold;
+  padding: 1vh;
+  align-items: baseline;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.options-box {
+  position: absolute;
+  top: -2vh;
+  right: 10vh;
+  background-color: #ac86da;
+  border: 1px solid #ccc;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  z-index: 999;
+  padding: 1vh;
+  height: 10vh;
+  width: 5vw;
+  border-radius: 20px;
+}
+
+.update-btn,
+.delete-btn {
+  background-color: transparent;
+  border: none;
+  color: white;
+}
+
+.delete-btn {
+  color: red;
+}
+
+.item-name-text {
+  width: 90%;
+  display: flex;
+  align-items: baseline;
+}
+
+.three-dots-posts {
+  display: flex;
+  align-items: end;
+  justify-content: baseline;
+  height: 100%;
+  font-size: 0.5em;
+  cursor: pointer;
+}
+
+.productDetails {
+  text-align: left;
+  /* display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: baseline; */
+}
+
+h2 {
+  font-size: 1em;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+.modal-donate-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.continue-button-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
+}
+
+.close-button,
+.close-button-vol {
+  cursor: pointer;
 }
