--- a/SE MS2/styles/login.css
+++ b/SE MS2/styles/login.css
@@ -166,3 +166,19 @@ label {
   height: 40px;
   margin: 0 5px;
 }
+
+.back-button {
+  position: absolute; /* Position the button absolutely */
+  top: 20px; /* Adjust the distance from the top */
+  left: 30px;
+  height: 50px;
+  width: 50px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: #00cab6;
+  border: none;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  color: aliceblue;
+  cursor: pointer;
+}
