--- a/SE MS2/Donor/donorOrg.css
+++ b/SE MS2/Donor/donorOrg.css
@@ -1,5 +1,4 @@
 .search-div {
-  border: 2px solid red;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,12 +36,12 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  
+
   background-color: #fbfbfc;
 }
 
 .post-div {
-  border: 5px solid  #ac86da;
+  border: 5px solid #ac86da;
   border-radius: 20px;
   height: 30vh;
   display: flex;
@@ -58,10 +57,9 @@
   height: 90%;
   overflow: hidden;
   border-radius: 20px;
-  
 }
 
-.back-button{
+.back-button {
   position: absolute; /* Position the button absolutely */
   top: 20px; /* Adjust the distance from the top */
   left: 50px;
@@ -75,7 +73,7 @@
   transition: all 0.3s ease-in-out;
   color: aliceblue;
   left: 0%;
- cursor: pointer;
+  cursor: pointer;
 }
 
 .book-pic {
@@ -111,7 +109,6 @@
   align-items: end;
   height: 100%;
   gap: 10px;
-  
 }
 .org-donate-button {
   width: 17%;
@@ -137,8 +134,7 @@
   font-size: 1.3em;
   cursor: pointer;
 }
-.details-button
-{
+.details-button {
   width: 26%;
   max-width: 10.5vw;
   height: 100%;
@@ -152,7 +148,7 @@
   border-style: solid;
   cursor: pointer;
 }
-.donor-details-button{
+.donor-details-button {
   width: 26%;
   max-width: 10.5vw;
   height: 100%;
@@ -166,7 +162,7 @@
   border-style: solid;
   cursor: pointer;
 }
-.org-details-button{
+.org-details-button {
   width: 26%;
   max-width: 10.5vw;
   height: 100%;
@@ -179,7 +175,6 @@
   border-width: 3px;
   border-style: solid;
   cursor: pointer;
-
 }
 .donate-button {
   width: 17%;
@@ -193,7 +188,7 @@
   font-size: 1.3em;
   cursor: pointer;
 }
-.download-button{
+.download-button {
   width: 26%;
   max-width: 10.5vw;
   height: 100%;
@@ -207,10 +202,9 @@
   border-style: solid;
   cursor: pointer;
 }
-.change-btn{
+.change-btn {
   width: 200px;
-  
- 
+
   border-radius: 50px;
   color: #f3f2f5;
   border-color: #8e65c0;
@@ -397,31 +391,30 @@ h2 {
   margin-left: 400px;
 }
 
-.button-container{
-  display:flex ;
+.button-container {
+  display: flex;
   flex-direction: row;
-  
 }
-.button2{
+.button2 {
   width: 100%;
   height: 10%;
   display: flex;
   flex-direction: row;
 }
-.button2 button{
- width: 50%;
- background-color: #00cab6;
- color: #e9e7e7;
- border: none;
- cursor: pointer;
-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-transition: all 0.3s ease-in-out;
+.button2 button {
+  width: 50%;
+  background-color: #00cab6;
+  color: #e9e7e7;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
 }
 .button2-button:hover {
   scale: 1.1;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
 }
-.name-div{
+.name-div {
   height: 10%;
   color: #fbfbfc;
   font-size: 3em;
