--- a/SE MS2/styles/homePageStyles.css
+++ b/SE MS2/styles/homePageStyles.css
@@ -185,6 +185,7 @@ a:hover {
 .sign-up-button:hover {
   scale: 1.1;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+  text-decoration: none;
 }
 
 .picture-part {
