--- a/SE MS2/styles/donorPageStyles.css
+++ b/SE MS2/styles/donorPageStyles.css
@@ -69,8 +69,15 @@ button {
   gap: 1.5vw;
 }
 
+.account-div a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .account-div label {
   color: white;
+  cursor: pointer;
 }
 
 .account-button {
@@ -82,10 +89,10 @@ button {
   border: none;
   color: white;
 }
-.back-button{
+.back-button {
   position: absolute; /* Position the button absolutely */
   top: 20px; /* Adjust the distance from the top */
-  left: 50px;
+  left: 20px;
   height: 50px;
   width: 50px;
   font-size: 10px;
@@ -95,8 +102,7 @@ button {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
   color: aliceblue;
-  left: 0%;
- cursor: pointer;
+  cursor: pointer;
 }
 .categories-div {
   height: 44%;
