--- a/SE MS2/styles/donorPageStyles.css
+++ b/SE MS2/styles/donorPageStyles.css
@@ -82,7 +82,22 @@ button {
   border: none;
   color: white;
 }
-
+.back-button{
+  position: absolute; /* Position the button absolutely */
+  top: 20px; /* Adjust the distance from the top */
+  left: 50px;
+  height: 50px;
+  width: 50px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: #00cab6;
+  border: none;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  color: aliceblue;
+  left: 0%;
+ cursor: pointer;
+}
 .categories-div {
   height: 44%;
   display: flex;
