--- a/SE MS2/styles/adminlogin.css
+++ b/SE MS2/styles/adminlogin.css
@@ -18,7 +18,22 @@ body {
   justify-content: center;
   gap: 2vh;
 }
-
+.back-button{
+  position: absolute; /* Position the button absolutely */
+  top: 20px; /* Adjust the distance from the top */
+  left: 50px;
+  height: 50px;
+  width: 50px;
+  font-size: 10px;
+  border-radius: 50px;
+  background-color: #00cab6;
+  border: none;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+  color: aliceblue;
+  left: 0%;
+ cursor: pointer;
+}
 .login-div {
   height: 60%;
   background-color: #ac86da;
