--- a/SE MS2/styles/homePageStyles.css
+++ b/SE MS2/styles/homePageStyles.css
@@ -175,6 +175,11 @@ a:hover {
   cursor: pointer;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sign-up-button:hover {
